--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -335,7 +335,245 @@ Purchase:
     </div>
     <!-- page_title_section end -->
     <!--project area start here-->
-    <div class="gallery-area pst_bottompadder90 pst_toppadder90">
+	<div class="team_wrapper pst_toppadder100 pst_bottompadder90">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                        <div class="team_about team_page_wrapper">
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img2.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                   <!-- <h1><a href="#">sandy s.</a></h1>-->
+                                    <p>Spray sanitization of large rooms and halls</p>
+                                </div>
+
+                            </div>
+
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                   <!-- <h1><a href="#">sandy s.</a></h1>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                    <i class="flaticon-squares"></i></a> </div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                        <div class="team_about team_page_wrapper">
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img3.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                    <!--<a href="#">akshay H.</a>-->
+                                    <p>Cleaning of the lifts, corridors and the outer parts of the building</p>
+                                </div>
+
+                            </div>
+
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                    <!--<h1><a href="#">akshay h.</a></h1>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                   <i class="flaticon-squares"></i> </div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                        <div class="team_about team_page_wrapper">
+
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img4.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                    <!--<a href="#">joahn due</a>-->
+                                    <p>Cleaning, repairing and fixing of the drainage holes.</p>
+                                </div>
+                            </div>
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                    <!--<a href="#">joahn due</a>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                    <i class="flaticon-squares"></i></a> </div>
+                            </div>
+                           <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>--> 
+
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                        <div class="team_about team_page_wrapper">
+
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img5.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                    <!--<a href="#">akshay h.</a>-->
+                                    <p>Provision of cleanliness to the houses with atmost care of your furnitures.</p>
+                                </div>
+                            </div>
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                    <!--<a href="#">akshay h.</a>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                    <i class="flaticon-squares"></i></div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                        <div class="team_about team_page_wrapper">
+
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img7.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                     <!--<a href="#">akshay h.</a>-->
+                                     <p>Pest control worker</p>
+                                </div>
+                            </div>
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                     <!--<a href="#">akshay h.</a>-->
+                                     <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                   <i class="flaticon-squares"></i> </div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                        <div class="team_about team_page_wrapper">
+
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img8.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                    <!--<a href="#">akshay h.</a>-->
+                                    <p>Providing clean and hygienic atmosphere at the offices and corporate places</p>
+                                </div>
+                            </div>
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                    <!--<a href="#">akshay h.</a>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                    <i class="flaticon-squares"></i> </div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+
+                        <div class="team_about team_page_wrapper">
+
+                            <div class="team_img team_img_page">
+
+                                <div class="sp_img_box_overlay"></div>
+                                <img src="images\img11.jpg" alt="img" class="img-responsive">
+                                <div class="sp-member-info">
+                                    <!--<a href="#">ajay S.</a>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                            </div>
+                            <div class="team_txt">
+                                <div class="team_txt_box team_txt_box_page">
+                                    <!--<a href="#">akshay h.</a>-->
+                                    <p>Pest control worker</p>
+                                </div>
+                                <div class="team_txt_icon team_txt_icon_page">
+                                   <i class="flaticon-squares"></i></div>
+                            </div>
+                            <!--<div class="team-content team_cntnt_page">
+                                <ul>
+                                    <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="Google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                    <li><a href="#" title="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>-->
+                        </div>
+                    </div>
+                  
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+                </div>
+            </div>
+        </div>
+    <!--<div class="gallery-area pst_bottompadder90 pst_toppadder90">
         <div class="container">
             <div class="row">
                 <div id="gallery">
@@ -351,7 +589,7 @@ Purchase:
                             </ul>
                         </div>
                     </div>-->
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="grid galler_2_btm_section">
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid-item rresentation branding * pst_bottompadder30">
