--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -478,7 +478,7 @@ Purchase:
                                 <img src="images\img7.jpg" alt="img" class="img-responsive">
                                 <div class="sp-member-info">
                                      <!--<a href="#">akshay h.</a>-->
-                                     <p>Pest control worker</p>
+                                     <p>Use of safe pesticides and chemicals for home</p>
                                 </div>
                             </div>
                             <div class="team_txt">
@@ -541,7 +541,7 @@ Purchase:
                                 <img src="images\img11.jpg" alt="img" class="img-responsive">
                                 <div class="sp-member-info">
                                     <!--<a href="#">ajay S.</a>-->
-                                    <p>Pest control worker</p>
+                                    <p>Provision of hygienic environment to societies especially in the parking lot</p>
                                 </div>
                             </div>
                             <div class="team_txt">
