--- a/contact_us.html
+++ b/contact_us.html
@@ -294,8 +294,8 @@ Purchase:
                                 <i class="fa fa-phone" aria-hidden="true"></i>
                             </div>
                             <div class="cnt-icon-content">
-                                <p>+1 800-585-5978
-                                    <br> +1 800-515-5978</p>
+                               <a href="tel:+918329897948"><p>+918329897948</p></a>
+                                    <a href="tel:+918329150218"><p>+918329150218</p></a>
                             </div>
                         </div>
                     </div>
@@ -305,8 +305,9 @@ Purchase:
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                             </div>
                             <div class="cnt-icon-content">
-                                <a href="#">
-                                    <p>hytechpest@gmail.com </p></a>
+                               <a href="mailto:hytechpest@gmail.com">
+                                        <p>hytechpest@gmail.com</p>
+                                    </a>
                                <!-- <br><a href="#">
                          spest@example.com</a>-->
                             </div>
