--- a/appt_new.html
+++ b/appt_new.html
@@ -264,6 +264,8 @@ Purchase:
                                     </li>-->
                                     <li class="active"> <a href="contact_us.html">contact us</a>
                                     </li>
+					 <li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                 </ul>
                                    
 									                             </div>
@@ -320,12 +322,14 @@ Purchase:
                                         </li>-->
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
+					     <li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                         </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                   <!-- <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="appointmnt_wrapper hidden-xs hidden-sm">
                             <ul>
                                 <li>
@@ -337,7 +341,7 @@ Purchase:
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
