--- a/contact_us.html
+++ b/contact_us.html
@@ -167,6 +167,8 @@ Purchase:
                                     </li>-->
                                     <li class="active"> <a href="contact_us.html">contact us</a>
                                     </li>
+					 <li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                 </ul>
                                    
 									                             </div>
@@ -223,12 +225,14 @@ Purchase:
                                         </li>-->
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
+					     <li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                         </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                    <!--<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="appointmnt_wrapper hidden-xs hidden-sm">
                             <ul>
                                 <li>
@@ -240,7 +244,7 @@ Purchase:
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
