--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ Purchase:
                                     </li>
                                     <li> <a href="contact_us.html">contact us</a>
                                     </li>
+					<li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                 </ul>
                             </div>
                             <!-- /.navbar-collapse -->
@@ -249,12 +251,14 @@ Purchase:
 										</li>
 										  <li><a href="contact_us.html">contact us</a>
                                         </li>
+					    <li> <a href="appt_new.html">appointment</a>
+                                    </li>
 										</ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                    <!--<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="appointmnt_wrapper hidden-xs hidden-sm">
                             <ul>
                                 <li>
@@ -266,7 +270,7 @@ Purchase:
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
