--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -196,6 +196,8 @@ Purchase:
                                     </li>
                                     <li><a href="contact_us.html">contact us</a>
                                     </li>
+					<li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                 </ul>
                             </div>
                             <!-- /.navbar-collapse -->
@@ -283,12 +285,14 @@ Purchase:
 										</li>
 										  <li><a href="contact_us.html">contact us</a>
                                         </li>
+					    <li> <a href="appt_new.html">appointment</a>
+                                    </li>
                                         </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                    <!--<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="appointmnt_wrapper hidden-xs hidden-sm">
                             <ul>
                                 <li>
@@ -300,7 +304,7 @@ Purchase:
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
