--- a/appt_new.html
+++ b/appt_new.html
@@ -258,7 +258,7 @@ Purchase:
                                     <li> <a href="our_work_gallery_new.html">our work</a>
                                         
                                     </li>
-                                    <li> <a href="blog_single.html">blog</a>
+                                    <li> <a href="blog_new.html">blog</a>
                                     </li>
                                    <!--<li><a href="team.html">our team</a>
                                     </li>-->
