--- a/services.html
+++ b/services.html
@@ -300,7 +300,7 @@ Purchase:
                     <!-- section_heading start -->
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="page_header_line">
-                            <h1 class="pst_bottompadder30"><span>about us</span></h1>
+                            <h1 class="pst_bottompadder30"><span>services</span></h1>
                         </div>
                     </div>
                 </div>
