--- a/appt_new.html
+++ b/appt_new.html
@@ -264,7 +264,7 @@ Purchase:
                                     </li>-->
                                     <li class="active"> <a href="contact_us.html">contact us</a>
                                     </li>
-					 <li> <a href="appt_new.html">appointment</a>
+					 <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                 </ul>
                                    
@@ -322,7 +322,7 @@ Purchase:
                                         </li>-->
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
-					     <li> <a href="appt_new.html">appointment</a>
+					     <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                         </ul>
                                 </div>
