--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -196,7 +196,7 @@ Purchase:
                                     </li>
                                     <li><a href="contact_us.html">contact us</a>
                                     </li>
-					<li> <a href="appt_new.html">appointment</a>
+					<li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                 </ul>
                             </div>
@@ -285,7 +285,7 @@ Purchase:
 										</li>
 										  <li><a href="contact_us.html">contact us</a>
                                         </li>
-					    <li> <a href="appt_new.html">appointment</a>
+					    <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                         </ul>
                                 </div>
