--- a/contact_us.html
+++ b/contact_us.html
@@ -167,7 +167,7 @@ Purchase:
                                     </li>-->
                                     <li class="active"> <a href="contact_us.html">contact us</a>
                                     </li>
-					 <li> <a href="appt_new.html">appointment</a>
+					 <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                 </ul>
                                    
@@ -225,7 +225,7 @@ Purchase:
                                         </li>-->
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
-					     <li> <a href="appt_new.html">appointment</a>
+					     <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                         </ul>
                                 </div>
