--- a/appt_new.html
+++ b/appt_new.html
@@ -13,7 +13,9 @@ Purchase:
 <!--[endif]-->
 
 <head>
+
 	<style type="text/css">
+		<style type="text/css">
         select{width:300px;}
         textarea{
             width:300px;
@@ -43,7 +45,8 @@ Purchase:
             border-color: #ecc204;
            
         }
-        </style>
+
+	</style>
 
 	<meta charset="utf-8">
 	<title>appointment</title>
