--- a/contact_us.html
+++ b/contact_us.html
@@ -362,7 +362,7 @@ We would be happy to answer your questions.</p>
                                                         <div class="inquiry_section-p">
                                                             <div class="form-group">
                                                                 <label class="sr-only">Phone</label>
-                                                                <input type="text" name="contact_no" placeholder="Phone" class="require form-control">
+                                                              <input type="tel" id="phone" name="phone" pattern="[789][0-9]{9}"  placeholder="Phone" class="require form-control" required>
                                                                 
                                                             </div>
                                                         </div>
