--- a/about_us_new.html
+++ b/about_us_new.html
@@ -872,18 +872,20 @@ Purchase:
                         <p>You can contact us any way that is convenient for you. We are available 24/7 via fax or email.<br>We would be happy to answer your questions.</p>
                     </div>
                 </div>
+		     <form action="https://formspree.io/priteechaugule@gmail.com" method="POST">
                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                     <!--<div class="wrapper_email_button pst_toppadder10">-->
-                       <form action="https://formspree.io/priteechaugule@gmail.com" method="POST">
+                      
                             <p>
-                            <textarea name="Email" placeholder="your email here">
+                            <textarea name="Message" placeholder="your email here">
                             </textarea>
                             </p>
                             <p><button type="submit" value="submit">Send email</button></p>
                         <!--<input type="email" placeholder="your email here">
                         <a href="#"><i class="fa fa-paper-plane" aria-hidden="true"></i></a>-->
-                    </form>
+                    
                     </div>
+			     </form>
                 </div>
             </div>
         </div>
