--- a/about_us_new.html
+++ b/about_us_new.html
@@ -877,8 +877,8 @@ Purchase:
                     <!--<div class="wrapper_email_button pst_toppadder10">-->
                       
                             <p>
-                            <textarea name="Message" placeholder="your email here">
-                            </textarea>
+                             <input type="text" name="name" placeholder="your email here">
+                            
                             </p>
                             <p><button type="submit" value="submit">Send email</button></p>
                         <!--<input type="email" placeholder="your email here">
