--- a/about_us_new.html
+++ b/about_us_new.html
@@ -877,7 +877,7 @@ Purchase:
                     <!--<div class="wrapper_email_button pst_toppadder10">-->
                       
                             <p>
-                             <input type="text" name="name" placeholder="your email here">
+                             <textarea name="message" placeholder="your email here">
                             
                             </p>
                             <p><button type="submit" value="submit">Send email</button></p>
