--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -33,7 +33,7 @@ input[type=submit] {
   background-color: #ecc204;
   color: black;
   padding: 12px 20px;
-  border:black;
+  border-color:black;
   border-radius:0%;
   cursor: pointer;
 }
@@ -42,7 +42,7 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color:  black;
   color:#ecc204;
-  border:#ecc204;
+  border-color:#ecc204;
 
 }
         </style>
