--- a/contact_us.html
+++ b/contact_us.html
@@ -28,8 +28,8 @@ Purchase:
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-    width:150px;
-    height:50px;
+    width: 90%; /* Full width */
+  height:10%;
   background-color: #ecc204;
   color: black;
   padding: 12px 20px;
