--- a/contact_us.html
+++ b/contact_us.html
@@ -13,9 +13,9 @@ Purchase:
 <!--[endif]-->
 
 <head>
-    <style type="text/css">
+   <style type="text/css">
         input[type=text], select, textarea {
-  width: 50%; /* Full width */
+  width: 90%; /* Full width */
   height:10%;
   padding: 12px; /* Some padding */ 
   border: 1px solid #ccc; /* Gray border */
@@ -28,12 +28,12 @@ Purchase:
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-    width: 90%; /* Full width */
-  height:10%;
+    width:150px;
+    height:50px;
   background-color: #ecc204;
   color: black;
   padding: 12px 20px;
-  border-color:black;
+  border:black;
   border-radius:0%;
   cursor: pointer;
 }
@@ -42,12 +42,9 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color:  black;
   color:#ecc204;
-  border-color: #ecc204;
+  border:#ecc204;
 
 }
-
-/* Add a background color and some padding around the form */
-
         </style>
     <meta charset="utf-8">
     <title>contact us</title>
