--- a/about_us_new.html
+++ b/about_us_new.html
@@ -27,7 +27,7 @@ Purchase:
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
+button {
     width:150px;
     height:50px;
   background-color: #ecc204;
@@ -39,7 +39,7 @@ input[type=submit] {
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
+button:hover {
   background-color:  black;
   color:#ecc204;
   border-color:#ecc204;
