--- a/contact_us.html
+++ b/contact_us.html
@@ -385,7 +385,7 @@ We would be happy to answer your questions.</p>
                                                         <div class="response"></div>
                                                         <div class="cntct_2_btn_wrapper">
                                                         <!--<input type="submit" name="submit"/>-->
-                                                        <button onclick="myFunction()" button type="submit" class="btn cntct_btn submitForm"  name="submit"/><!--</button>-->
+                                                        <button onclick="myFunction()" button type="submit" class="btn cntct_btn submitForm"  name="submit">Submit</button><!--</button>-->
                                                         </div>
                                                     </div>
                                             </div>
