--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -768,7 +768,7 @@ button:hover {
         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
              <!--<div class="wrapper_email_button pst_toppadder10">-->
 
-                     <p> <textarea id="subject" name="subject" placeholder="Write something.." style="height:90px"></textarea></p>
+                     <p> <textarea id="subject" name="Query" placeholder="Enter your query" style="height:90px"></textarea></p>
                   
                      <button onclick="myFunction()" button type="submit" value="Submit">send</button>
                                   
