--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ Purchase:
                                             <li><a href="gallery_4.html"> gallery IV</a>
                                             </li>
                                         </ul>
-                                    </li>-->
-                                    <li> <a href="blog_new.html">blog</a>
+                                    </li>
+                                    <li> <a href="blog_new.html">blog</a>-->
                                         <!--<ul class="dropdown-menu hovr_nav_tab">
                                             <li><a href="blog_single.html">blog single</a>
                                             </li>
@@ -240,8 +240,8 @@ Purchase:
                                             <li><a href="gallery_4.html"> gallery IV</a>
                                             </li>
                                             </ul>
-                                        </li>-->
-                                        <li><a href='blog_new.html'>blog</a>
+                                        </li>
+                                        <li><a href='blog_new.html'>blog</a>-->
                                         <!-- <ul>
                                              <li><a href="blog_single.html">blog single</a>
                                             </li>
@@ -528,7 +528,7 @@ Purchase:
                     <div class="sp_who_we_are_wrapper">
                         <div class="ps_img_wrapper">
                             <div class="img-effect zoom-slow">
-                                <img src="images\who_we_img.jpg" class="img-responsive" alt="img">
+                                <img src="images\img4.jpg" class="img-responsive" alt="img">
                             </div>
 							<div class="who_we_Are_txt_wrapper">
                                 
@@ -613,17 +613,17 @@ Purchase:
                         <div class="owl-carousel owl-theme">
                             <div class="item">
                                 <div class="abt_img img-effect zoom-slow">
-                                    <img src="images\abt_img.jpg" alt="img" class="img-responsive">
+                                     <img src="images\img3.jpg" alt="img" class="img-responsive">
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="abt_img img-effect zoom-slow">
-                                    <img src="images\abt_img_1.jpg" alt="img" class="img-responsive">
+                                    <img src="images\img5.jpg" alt="img" class="img-responsive">
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="abt_img img-effect zoom-slow">
-                                    <img src="images\Pest-Control.jpg" alt="img" class="img-responsive">
+                                    <img src="images\img7.jpg" alt="img" class="img-responsive">
                                 </div>
                             </div>
 
@@ -1544,9 +1544,9 @@ Purchase:
                                 <li><a href="our_work_gallery_new.html"><i class="fa fa-circle"></i>Our Work</a>
                                 </li>
                                 <!--<li><a href="team.html"><i class="fa fa-circle"></i>Our Team</a>
-                                </li>-->
-                                <li><a href="blog_new.html"><i class="fa fa-circle"></i>Blog</a>
                                 </li>
+                                <li><a href="blog_new.html"><i class="fa fa-circle"></i>Blog</a>
+                                </li>-->
                             </ul>
                         </div>
                     </div>
