--- a/about_us_new.html
+++ b/about_us_new.html
@@ -345,7 +345,7 @@ button:hover {
                             <h4> our mission  <span></span></h4>
                         </div>
                         <div class="abt_img_right_page img-effect zoom-slow">
-                            <img src=""images\img11.jpg"" alt="img" class="img-responsive">
+                            <img src="images\img11.jpg" alt="img" class="img-responsive">
                         </div>
                         <p class="pstabt_left_img_wrapper">HyTech Pest Control was started with a vision of creating a healthy and hygienic homely environment.</p>
                         <p class="pstabt_left_img_wrapper">Here at HyTech Pest Control Services, we are passionate about making sure that your family is happy, healthy and safe from any pest control problems.</p>
