--- a/about_us_new.html
+++ b/about_us_new.html
@@ -159,6 +159,26 @@ button:hover {
                                     <li class="active"><a href="about_us_new.html">about us</a>
                                     </li>
                                     <li> <a href="services.html">services</a>
+					    <ul class="dropdown-menu hovr_nav_tab">
+						<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
+                                            <li><a href="rodent_removal.html"> Rodent Removal</a>
+                                            </li>
+                                            <li><a href="lizard_control.html"> Lizard Control</a>
+                                            </li>
+						<li><a href="bedbug_control.html"> Bed Bug Control</a>
+                                            </li>
+                                            <li><a href="mosquito_control.html"> Mosquito Control</a>
+                                            </li>
+                                            <li><a href="coackroach_control.html"> Cockroach Control</a>
+                                            </li>
+						    <li><a href="snake_control.html"> Snake Control</a>
+                                            </li>
+                                            <li><a href="spider_control.html"> Spider Control</a>
+                                            </li>
+                                            <li><a href="termite_control.html"> Termite Control</a>
+                                            </li>
+					    </ul>
                                     </li>
                                     <li> <a href="our_work_gallery_new.html">our work</a>
                                        <!-- <ul class="dropdown-menu hovr_nav_tab">
@@ -247,6 +267,26 @@ button:hover {
                                         <li class="active"><a href="about_us_new.html">about us</a>
                                         </li>
                                         <li> <a href="services.html">services</a>
+						<ul class="dropdown-menu hovr_nav_tab">
+						<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
+                                            <li><a href="rodent_removal.html"> Rodent Removal</a>
+                                            </li>
+                                            <li><a href="lizard_control.html"> Lizard Control</a>
+                                            </li>
+						<li><a href="bedbug_control.html"> Bed Bug Control</a>
+                                            </li>
+                                            <li><a href="mosquito_control.html"> Mosquito Control</a>
+                                            </li>
+                                            <li><a href="coackroach_control.html"> Cockroach Control</a>
+                                            </li>
+						    <li><a href="snake_control.html"> Snake Control</a>
+                                            </li>
+                                            <li><a href="spider_control.html"> Spider Control</a>
+                                            </li>
+                                            <li><a href="termite_control.html"> Termite Control</a>
+                                            </li>
+					    </ul>
                                         </li>
                                         <li> <a href="our_work_gallery_new.html">our work</a>
                                             <!--<ul>
@@ -1028,23 +1068,23 @@ button:hover {
                         <div class="wrapper_second_useful wrapper_second_useful_2">
                             <h4>services</h4>
                             <ul>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Plant Insect Control</a>
+                                <li><a href="plant_insect_control.html"><i class="fa fa-circle"></i>Plant Insect Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Rodent Removal</a>
+                                <li><a href="rodent_removal.html"><i class="fa fa-circle"></i>Rodent Removal</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Lizard Control</a>
+                                <li><a href="lizard_control.html"><i class="fa fa-circle"></i>Lizard Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Bedbug Control</a>
+                                <li><a href="bedbug_control.html"><i class="fa fa-circle"></i>Bedbug Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Mosquito Control</a>
+                                <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Snake Control</a>
+                                <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Spider Control</a>
+                                <li><a href="spider_control.html"><i class="fa fa-circle"></i>Spider Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Termite Control</a>
+                                <li><a href="termite_control.html"><i class="fa fa-circle"></i>Termite Control</a>
                                 </li>
                             </ul>
                         </div>
@@ -1058,7 +1098,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">webstrot</a></p>
+                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">kodeIT Solutions</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
