--- a/mosquito_control.html
+++ b/mosquito_control.html
@@ -175,6 +175,26 @@ Purchase:
                                     <li><a href="about_us_new.html">about us</a>
                                     </li>
                                     <li> <a href="services.html">services</a>
+					     <ul class="dropdown-menu hovr_nav_tab">
+			<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
+                                            <li><a href="rodent_removal.html"> Rodent Removal</a>
+                                            </li>
+                                            <li><a href="lizard_control.html"> Lizard Control</a>
+                                            </li>
+			<li><a href="bedbug_control.html"> Bed Bug Control</a>
+                                            </li>
+                                            <li><a href="mosquito_control.html"> Mosquito Control</a>
+                                            </li>
+                                            <li><a href="coackroach_control.html"> Cockroach Control</a>
+                                            </li>
+			<li><a href="snake_control.html"> Snake Control</a>
+                                            </li>
+                                            <li><a href="spider_control.html"> Spider Control</a>
+                                            </li>
+                                            <li><a href="termite_control.html"> Termite Control</a>
+                                            </li>
+					    </ul>
                                     </li>
                                     <li> <a href="our_work_gallery_new.html">our work</a>
                                         
@@ -232,6 +252,26 @@ Purchase:
                                         <li><a href="about_us_new.html">about us</a>
                                         </li>
                                         <li> <a href="services.html">services</a>
+						 <ul class="dropdown-menu hovr_nav_tab">
+			<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
+                                            <li><a href="rodent_removal.html"> Rodent Removal</a>
+                                            </li>
+                                            <li><a href="lizard_control.html"> Lizard Control</a>
+                                            </li>
+			<li><a href="bedbug_control.html"> Bed Bug Control</a>
+                                            </li>
+                                            <li><a href="mosquito_control.html"> Mosquito Control</a>
+                                            </li>
+                                            <li><a href="coackroach_control.html"> Cockroach Control</a>
+                                            </li>
+			<li><a href="snake_control.html"> Snake Control</a>
+                                            </li>
+                                            <li><a href="spider_control.html"> Spider Control</a>
+                                            </li>
+                                            <li><a href="termite_control.html"> Termite Control</a>
+                                            </li>
+					    </ul>
                                         </li>
                                         <li> <a href="our_work_gallery_new.html">our work</a>
                                             
