--- a/appt_new.html
+++ b/appt_new.html
@@ -313,7 +313,7 @@ button:hover {
     <div class="sp_fm_contact_section">
         <div class="container">
             <div style="text-align:center">
-		    <h1><b>Contact Us</b></h1>
+		    <h1><b>Appointment</b></h1>
               
             </div>
             <div class="row">
