--- a/contact_us.html
+++ b/contact_us.html
@@ -393,19 +393,19 @@ We would be happy to answer your questions.</p>
                                                         <div class="inquiry_section-pos">
                                                             <div class="form-group">
                                                                 <label class="sr-only">Name</label>
-                                                                 <input type="text" name="full_name" placeholder="Full Name" class="require form-control">
+                                                                 <input required type="text" name="full_name" placeholder="Full Name" class="require form-control">
                                                             </div>
                                                         </div>
                                                         <div class="inquiry_section-e">
                                                             <div class="form-group">
                                                                 <label class="sr-only">Email</label>
-                                                                <input type="email" name="email" placeholder="Email" class="require form-control" data-valid="email" data-error="Email should be valid.">
+                                                                <input required type="email" name="email" placeholder="Email" class="require form-control" data-valid="email" data-error="Email should be valid.">
                                                             </div>
                                                         </div>
                                                         <div class="inquiry_section-p">
                                                             <div class="form-group">
                                                                 <label class="sr-only">Phone</label>
-                                                              <input type="tel" id="phone" name="phone" pattern="[789][0-9]{9}"  placeholder="Phone" class="require form-control" required>
+                                                              <input required type="tel" id="phone" name="phone" pattern="[789][0-9]{9}"  placeholder="Phone" class="require form-control" required>
                                                                 
                                                             </div>
                                                         </div>
@@ -415,7 +415,7 @@ We would be happy to answer your questions.</p>
                                                         <div class="inquiry_section-m">
                                                             <div class="form-group">
                                                                 <label class="sr-only">Message</label>
-                                                              <textarea rows="7" name="message" placeholder="Message" class="require form-control"></textarea>
+                                                              <textarea required rows="7" name="message" placeholder="Message" class="require form-control"></textarea>
                                                             </div>
                                                         </div>
                                                     </div>
