--- a/bedbug_control.html
+++ b/bedbug_control.html
@@ -361,10 +361,10 @@ Purchase:
                 <div class="abt_page_img_rght_wrapper">
                 <div class="pc_abt_img_wrapper">
                      <p class="types">Types of Bed Bugs</p>
-                            <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\common_bedbug.jpg" alt="img" class="img1">
+                            <img src="images\common_bedbug.jpg" alt="img" class="img1">
                             <div class="img1-para">Common Bed Bugs</div>
                     
-                           <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\tropical_bb.jpg" alt="img" class="img2">
+                           <img src="images\tropical_bb.jpg" alt="img" class="img2">
                             <div class="img2-para">Tropical Bed Bugs</div>
                     
                           <!--  <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\madagascar-cockroach.jpg" alt="img" class="img3">
