--- a/mosquito_control.html
+++ b/mosquito_control.html
@@ -362,10 +362,10 @@ Purchase:
                 <div class="abt_page_img_rght_wrapper">
                 <div class="pc_abt_img_wrapper">
                      <p class="types">Types of Mosquitoes</p>
-                            <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\Anopheles Mosquito.jpg" alt="img" class="img1">
+                            <img src="images\Anopheles Mosquito.jpg" alt="img" class="img1">
                             <div class="img1-para">Anopheles Mosquito</div>
                     
-                           <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\Tiger Mosquito.jpg" alt="img" class="img2">
+                           <img src="images\Tiger Mosquito.jpg" alt="img" class="img2">
                             <div class="img2-para">Tiger Mosquito</div>
                     
                           <!--  <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\madagascar-cockroach.jpg" alt="img" class="img3">
