--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ Purchase:
         }
         </style>
     <meta charset="utf-8">
-    <title>about us new</title>
+    <title>Services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="smart pest">
     <meta name="keywords" content="pest control/smart pest/ controller/pestguard">
@@ -154,10 +154,10 @@ Purchase:
                                     </li>
                                     <li><a href="about_us_new.html">about us</a>
                                     </li>
-                                    <li class="active"> <a href="services.html">services</a>
-					     <ul class="dropdown-menu hovr_nav_tab">
-			<li><a href="plant_insect_control.html"> Plant Insect Control</a>
-                                            </li>
+					 <li class="active"> <a href="services.html">services</a>
+                                        <ul class="dropdown-menu hovr_nav_tab">
+					<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+					 </li>
                                             <li><a href="rodent_removal.html"> Rodent Removal</a>
                                             </li>
                                             <li><a href="lizard_control.html"> Lizard Control</a>
@@ -174,7 +174,8 @@ Purchase:
                                             </li>
                                             <li><a href="termite_control.html"> Termite Control</a>
                                             </li>
-					    </ul>
+					 					
+                                        </ul>
                                     </li>
                                     <li> <a href="our_work_gallery_new.html">our work</a>
                                        <!-- <ul class="dropdown-menu hovr_nav_tab">
@@ -263,9 +264,9 @@ Purchase:
                                         <li ><a href="about_us_new.html">about us</a>
                                         </li>
                                         <li class="active"> <a href="services.html">services</a>
-						 <ul class="dropdown-menu hovr_nav_tab">
-			<li><a href="plant_insect_control.html"> Plant Insect Control</a>
-                                            </li>
+                                        <ul class="dropdown-menu hovr_nav_tab">
+					<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+					 </li>
                                             <li><a href="rodent_removal.html"> Rodent Removal</a>
                                             </li>
                                             <li><a href="lizard_control.html"> Lizard Control</a>
@@ -282,8 +283,9 @@ Purchase:
                                             </li>
                                             <li><a href="termite_control.html"> Termite Control</a>
                                             </li>
-					    </ul>
-                                        </li>
+					 					
+                                        </ul>
+                                    </li>
                                         <li> <a href="our_work_gallery_new.html">our work</a>
                                             <!--<ul>
                                             <li><a href="gallery_2.html"> gallery II</a>
@@ -368,21 +370,21 @@ Purchase:
                         <div class="owl-carousel owl-theme">
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\serv_slider_img.jpg" alt="img" class="img-responsive">
-                                    <h1>window cleaning </h1>
+                                    <img src="images\img2.jpg" alt="img" class="img-responsive">
+                                    <h1>Spray Sanitization </h1>
                                 </div>
 
                             </div>
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\galery_3_7.jpg" alt="img" class="img-responsive">
-                                    <h1>yard cleaning </h1>
+                                    <img src="images\img3.jpg" alt="img" class="img-responsive">
+                                    <h1>Lift cleaning </h1>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\galery_3_1.jpg" alt="img" class="img-responsive">
-                                    <h1>surface cleaning </h1>
+                                    <img src="images\img4.jpg" alt="img" class="img-responsive">
+                                    <h1>Dranage hole cleaning </h1>
                                 </div>
                             </div>
                         </div>
